# Trashfire

./: .gitignore  README.md
BFS-DFS/: BFS.py  DFS.py  README.md  dijkstra.py  graph.py  test_graph.py
BST+/: README.md  bst_plus.py
BinaryTrees/: .tsconfig  DataStructures.ts  Node.ts  VisualAlgorithmns.ts  Visualizer.ts  index.html  package.json  tsconfig.json  webpack.config.js
VisualDataStructures/: README.md  Test_DataStructures.ts  VisualAlgorithmns.ts  Visualizer.ts  index.html  package.json  tsconfig.json
haskell-23trees/: README.md  haskell-23trees.cabal
haskell-23trees/src/: Main.hs
haskell-heaps/: README.md  haskell-heaps.cabal
haskell-json-parser/: README.md
heaps/: .gitignore  README.md  heaps.py  heaps_test.py
minimum_pairs/: solution.py
tic-tac-toe design/: README.md
