name:                haskell-heaps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ILikePizza555/haskell-heaps#readme
author:              Isaac
maintainer:          avrisaac555@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-heaps
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , foundation
